Bugfix: KB Header padding
removing extra padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faff', end
 /* ==========================================================================
 Knowledge Base 
 ========================================================================== */
+#KBHeader {padding-bottom:0px;}
+#KBHeader h1 {font-size: 24px;margin-bottom:0px;}
 .KBIdeas,.KBSoftEng , .KBEssCell,.KBOtherTopCell, .KBOtherBottCell, .KBBeyond 
 {border: 2px solid gray;border-radius:7px;text-align:center;vertical-align:middle;line-height: 1.8em;padding-top:4px;padding-bottom:4px;}
 .KBContent,.KBIdeas, .KBSoftEng, .KBWrapper, .KBEss, .KBOtherTop, .KBOtherBott, .KBBeyond,
